kubernetes/streaming-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: streaming
  labels:
    name: streaming
